src/components/style/TransactionPlotItem.scss
@import "./defaultTheme";

.PerformrRunnerResultGraph .TransactionPlotItem {
    position: relative;
    pointer-events: none;

    > .plotWrap {
        height: $PerformrRunnerResultGraph_transactionPlotHeight;

        > button.plot {
            pointer-events: auto;
            position: absolute;
            top: 1px;
            height: $PerformrRunnerResultGraph_transactionPlotHeight - 2px;
            // left and width are set by script
            background: $PerformrRunnerResultGraph_transactionPlotColorOdd;
            text-align: center;
            border: none;
            padding: 0;
            color: inherit;
            font: inherit;
            cursor: pointer;

            > .title {
                font-weight: bold;

                &:after {
                    content: ": ";
                }
            }

            > .time {

            }
        }
    }

    &:nth-child(even) > .plotWrap > .plot {
        background: $PerformrRunnerResultGraph_transactionPlotColorEven;
    }
}

